src/test/ui/terr-in-field.stderr
error[E0308]: mismatched types
  --> $DIR/terr-in-field.rs:13:14
   |
LL |     want_foo(b);
   |              ^ expected struct `Foo`, found struct `Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
